--- a/src/features/RecordManager/RecordManager.module.css
+++ b/src/features/RecordManager/RecordManager.module.css
@@ -1,17 +1,17 @@
 .container {
-    max-width: 1200px;
-    margin: 20px auto;
+    margin: 20px 0;
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     font-family: sans-serif;
     color: #333; /* Cor de texto padrão para modo claro */
+    width: 100%;
 }
 
 .container.darkMode {
     background-color: #2c2c2c; /* Fundo escuro para o container */
-    color: #e0e0e0; /* Texto claro para o container */
+    color: #f0f0f0; /* Texto claro para o container */
     box-shadow: 0 2px 10px rgba(0,0,0,0.5);
 }
 
